# py-ceph

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
src/: CLIConfig.py  CephImageBatch.py  ConsoleMsg.py  Helpers.py  Landmarks.py  ModelWrapper.py  __init__.py  lossFunction.py  models.py  predict.py  predict_cli.py  pyceph.py  utils.py
src/pyceph/: CLIConfig.py  CephImageBatch.py  Helpers.py  Landmarks.py  ModelWrapper.py  __init__.py  input.yml  lossFunction.py  pyceph.py  pyceph_cli.py
tests/: CLIConfig_test.py  CephImageBatch_test.py  Helpers_test.py  Landmarks_test.py  ModelWrapper_test.py
tests/test-images/predicted_images_example/: landmarks.csv
