[metadata]
name = py-ceph
version = 0.0.1
author = Teddy Zhang
author_email = tedcbook@gmail.com
url = https://github.com/zhangted/py-ceph
description = Pytorch-based solution to find basic landmarks on lateral radiology image of skull
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Intended Audience :: Science/Research

[options]
packages = find:
package_dir =
  = src
include_package_data = True
install_requires =
  pytest
  pyyaml
  pandas
  torch
  numpy
  torch
  matplotlib
  scikit-image

[options.packages.find]
where = src

[options.package_data]
* =
  *.pkl.gz

[options.entry_points]
console_scripts =
  py-ceph = predict_cli:main
